welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:1: error: Missing closing brace `}' assumed here
def greenTicket(a:Int, b:Int, c:Int):Int = {
^